fix problem with header overlapping text on 404 page

--- a/themes/zach/sass/partials/_404.scss
+++ b/themes/zach/sass/partials/_404.scss
@@ -4,24 +4,27 @@
  */
 
  .error404 {
- 		.page-header {
- 			@media screen and (max-width: 400px) {
- 				border-bottom: 0;
-				margin: 0 auto 24px;
-				padding: 0 10px;
- 			}
- 		}
- 		.page-content {
- 			padding-top: 0;
- 			@media screen and (min-width: 401px) {
- 				margin: 20% auto 0;
- 				p {
- 					color: white;
-					text-align: center;
- 				}
- 			}
- 			.search-form {
- 				margin-bottom: 25px;
- 			}
- 		}
- }
+  .site-header {
+    position: relative;
+  }
+	.page-header {
+		@media screen and (max-width: 400px) {
+			border-bottom: 0;
+		margin: 0 auto 24px;
+		padding: 0 10px;
+		}
+	}
+	.page-content {
+		padding-top: 0;
+		@media screen and (min-width: 401px) {
+			margin: 20% auto 0;
+			p {
+				color: white;
+			text-align: center;
+			}
+		}
+		.search-form {
+			margin-bottom: 25px;
+		}
+	}
+}
